<resources>
    <string name="app_name">Agenda</string>
    <string name="cadastro_option_name">Nome</string>
    <string name="cadastro_option_cpf">CPF</string>
    <string name="cadastro_option_data_cadastro">Data de cadastro</string>
    <string name="cadastro_option_data_nasc">Data de nascimento</string>
    <string name="cadastro_option_telefone">Telefone</string>
    <string name="cadastro_option_uf">UF : </string>
    <string name="label_salvar">Salvar</string>
    <string name="cadastro_label">Cadastro</string>
    <string name="cadastro_error">Dados não preenchidos corretamente</string>
    <string name="cadastro_dialog_positive_message">Entendi</string>
    <string name="cadastro_button_add_telefone">Adicionar Telefone</string>
    <string name="contato_label">Contato</string>
    <string name="default_positive_button">Sim</string>
    <string name="default_negative_button">Cancelar</string>
    <string name="confirmar_excluir_contato">Deseja excluir o contato %1$s?</string>

</resources>