<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="constantes"
            type="com.example.agenda.utils.Constantes"/>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextCadastroNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/cadastro_option_name"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCadastroCpf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            mask="@{constantes.maskCPF}"
            android:hint="@string/cadastro_option_cpf"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCadastroNome" />

        <EditText
            android:id="@+id/editTextCadastroDataDeCadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/cadastro_option_data_cadastro"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCadastroCpf" />

        <EditText
            android:id="@+id/editTextCadastroDataNascimento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/cadastro_option_data_nasc"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCadastroDataDeCadastro" />

        <Spinner
            android:id="@+id/spinnerCadastroUf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/editTextCadastroDataNascimento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCadastroLabelUf"
            app:layout_constraintTop_toBottomOf="@+id/editTextCadastroDataDeCadastro" />

        <EditText
            android:id="@+id/editTextCadastroTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            mask="@{constantes.maskCel}"
            android:hint="@string/cadastro_option_telefone"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCadastroDataNascimento" />

        <TextView
            android:id="@+id/textViewCadastroLabelUf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cadastro_option_uf"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextCadastroDataNascimento"
            app:layout_constraintStart_toEndOf="@+id/editTextCadastroDataNascimento"
            app:layout_constraintTop_toBottomOf="@+id/editTextCadastroDataDeCadastro" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>